Fix calledmeeting clipping

--- a/code/Systems/UI/Elements/Voting/PlayerPanel.scss
+++ b/code/Systems/UI/Elements/Voting/PlayerPanel.scss
@@ -8,7 +8,7 @@
     border: 4px solid rgba(black, 0.6);
     flex-direction: row;
     color: #f6ded4;
-    overflow: hidden;
+    overflow: visible;
 
     &.dead {
         opacity: 0.3;
@@ -73,13 +73,13 @@
             top: 0px;
             z-index: -1;
             opacity: 0;
-            font-size: 200px;
-            padding-top: 20px;
-            color: #DC2828;
+            font-size: 180px;
+            color: #FF4949;
             align-items: center;
             justify-content: center;
             transform: rotate(10deg);
-            font-weight: 500;
+            font-weight: 600;
+            padding-top: 20px;
 
             &.visible {
                 opacity: 1;
